--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +62,7 @@ flutter:
     - images/login-fish.png
     - images/app_icon.png
     - images/login_image.png
+    - images/water.png
 
 
   # To add assets to your application, add an assets section, like this:
