--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_database: ^10.0.0
  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
+  firebase_core: ^2.25.4
 
 dev_dependencies:
   flutter_test:
