--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_database: ^10.4.5
+  firebase_database: ^10.5.4
   provider: ^5.0.0
   flutter_local_notifications: ^17.1.0
   permission_handler: 11.3.1
+  intl: ^0.17.0
+
 
 
  
@@ -75,6 +77,7 @@ flutter:
     - images/water.png
     - images/ig.jpg
     - images/profile-icon.png
+    - images/profile_icon.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
