--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,13 @@ dependencies:
   cupertino_icons: ^1.0.5
   firebase_core: ^2.3.0
   firebase_auth: ^4.17.8
-  firebase_messaging: 14.8.2  # Update to the latest stable version
+  firebase_messaging: 14.8.2
+  mailer: ^5.3.0
+  google_sign_in: ^5.0.0
+  flutter_signin_button: ^2.0.0
+
+
+  # Update to the latest stable version
 
   
 
